--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Closet Scanner</title>
-
   <!-- PWA Manifest -->
   <link rel="manifest" href="data:application/manifest+json,{
     \"name\":\"Closet Scanner\",
@@ -15,7 +14,6 @@
     \"theme_color\":\"#4CAF50\",
     \"icons\":[{\"src\":\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E%F0%9F%93%A6%3C/text%3E%3C/svg%3E\",\"sizes\":\"192x192\",\"type\":\"image/svg+xml\"}]
   }">
-
   <style>
     body {font-family:-apple-system,system-ui,sans-serif;margin:20px;background:#f0f0f0;text-align:center;}
     #video {width:100%;max-width:420px;border-radius:12px;display:none;margin:15px auto;}
@@ -31,27 +29,21 @@
 </head>
 <body>
   <h2>Supply Closet Scanner</h2>
-
   <button id="startBtn">Start Camera</button>
   <button id="inventoryBtn">Show Inventory</button>
-
   <video id="video" autoplay playsinline muted></video>
   <p id="status">Tap to start…</p>
-
   <input id="name_input" placeholder="Item name">
   <button id="save_btn">Save</button>
-
   <!-- Inventory Table -->
   <table id="inventory">
     <thead><tr><th>Item Name</th><th>Quantity</th></tr></thead>
     <tbody></tbody>
   </table>
-
   <!-- ZXing -->
   <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.21.0/umd/index.min.js"></script>
-
   <script>
-      const API = "https://script.google.com/macros/s/AKfycbyKHzGyNnNYlR6qqqIimpAFO8P7W7tqka9dyHtqTgihCv3Nxoy7vhx84PbXASAmfslU/exec";
+    const API = "https://script.google.com/macros/s/AKfycbyKHzGyNnNYlR6qqqIimpAFO8P7W7tqka9dyHtqTgihCv3Nxoy7vhx84PbXASAmfslU/exec";
     let currentBarcode = null;
     const codeReader = new ZXing.BrowserMultiFormatReader();
     const videoEl = document.getElementById('video');
@@ -60,7 +52,7 @@
     const status = document.getElementById('status');
     const inventoryTable = document.getElementById('inventory').querySelector('tbody');
 
-  // === INVENTORY BUTTON ===
+    // === INVENTORY BUTTON (FIXED) ===
     inventoryBtn.onclick = async () => {
       inventoryBtn.disabled = true;
       inventoryBtn.textContent = "Loading…";
@@ -72,20 +64,14 @@
         const res = await fetch(`${API}?list=1`, { mode: 'cors' });
         if (!res.ok) throw new Error(`HTTP ${res.status}`);
 
-        let items;
-        try {
-          items = await res.json();
-        } catch (jsonErr) {
-          throw new Error("Server returned invalid JSON");
-        }
-
+        const items = await res.json();  // ← ONE CALL ONLY
         if (!Array.isArray(items)) throw new Error("Data is not an array");
 
         if (items.length === 0) {
           inventoryTable.innerHTML = "<tr><td colspan='2'>No items</td></tr>";
         } else {
           items.forEach(item => {
-            const row começaram = document.createElement('tr');
+            const row = document.createElement('tr');  // ← FIXED: no "começaram"
             row.innerHTML = `<td>${item.name}</td><td>${item.qty}</td>`;
             inventoryTable.appendChild(row);
           });
@@ -103,7 +89,7 @@
       }
     };
 
-  // === CAMERA & SCANNER (unchanged, just here for context) ===
+    // === CAMERA & SCANNER (unchanged) ===
     startBtn.onclick = async () => {
       startBtn.disabled = true;
       startBtn.textContent = "Starting…";
@@ -118,12 +104,10 @@
         startBtn.style.display = "none";
         inventoryBtn.style.display = "none";
         status.textContent = "Camera on – initializing…";
-
         await new Promise((r, rej) => {
           videoEl.onloadedmetadata = () => videoEl.play().then(() => setTimeout(r, 300)).catch(rej);
           videoEl.onerror = rej;
         });
-
         status.textContent = "Scanning…";
         codeReader.decodeFromVideoDevice(null, videoEl, (result) => {
           if (result) {
@@ -148,6 +132,7 @@
       }
     };
 
+    // === SAVE NAME (unchanged) ===
     document.getElementById('save_btn').onclick = () => {
       const name = document.getElementById('name_input').value.trim();
       if (name && currentBarcode) {
@@ -156,7 +141,7 @@
             status.textContent = `Added: ${name}`;
             document.getElementById('name_input').style.display = "none";
             document.getElementById('save_btn').style.display = "none";
-              document.getElementById('name_input').value = "";
+            document.getElementById('name_input').value = "";
             setTimeout(() => codeReader.reset(), 2000);
           });
       }
@@ -164,5 +149,3 @@
   </script>
 </body>
 </html>
-
-
